<resources>
    <string name="app_name">Application</string>
    <string name="str_start">start</string>
    <string name="str_back_arrow">Back arrow</string>
    <string name="textview">TextView</string>
    <string name="str_review">Review</string>
    <string name="str_articles">Articles</string>
    <string name="str_like">like</string>
    <string name="str_dislike">dislike</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_gridview">GridView</string>
    <string name="str_listview">ListView</string>
    <string name="img_article_desc">ImageView of article</string>
    <string name="img_liked_article">Image for liked article</string>
    <string name="no_article_message">Sorry. There is no article for now. \nPlease try again.</string>
    <string name="str_retry">retry</string>
</resources>
