<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="media"
            type="com.app.test.model.Media"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_article"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:minHeight="@dimen/img_article_min_height"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher"
            android:src="@{media.uri}"
            android:contentDescription="@string/img_article_desc"/>

        <Button
            android:id="@+id/btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/str_like"
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/white"
            android:background="@drawable/ic_like_background"
            app:layout_constraintEnd_toStartOf="@+id/btn_dislike"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_article" />

        <Button
            android:id="@+id/btn_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/str_dislike"
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/white"
            android:background="@drawable/ic_dislike_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_like"
            app:layout_constraintTop_toBottomOf="@+id/img_article" />

        <TextView
            android:id="@+id/txt_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_marginStart="@dimen/margin_start"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@+id/btn_review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:text="@string/str_review"
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/white"
            android:background="@drawable/ic_rounded_gray_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>